Add link to projects

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,10 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Posts</a>
+            <b><a href="{{ site.baseurl }}/projects">Projects</a></b>
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/resources">Resources</a>
+            <a href="{{ site.baseurl }}/">Posts</a>
           </nav>
         </header>
       </div>
