--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@
           </div>
 
           <nav>
+            <a href="http://sdrock.0x26.net:8080">Scanner</a>
             <b><a href="{{ site.baseurl }}/projects">Projects</a></b>
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/resources">Resources</a>
