--- a/_sass/_comment-styles.scss
+++ b/_sass/_comment-styles.scss
@@ -2,6 +2,7 @@
 // https://github.com/willymcallister/willymcallister.github.io/blob/fbc7f396fbe80186b1abc63e436ec509190c1b3a/assets/main.scss
 
 $base-font-size:    18px !default;
+$small-font-size:    12px !default;
 $comment-font-size: 17px !default;
 
 
@@ -67,7 +68,7 @@ textarea {
     margin: 4px 0px 0px 0px;
 }
 button:hover {
-    background-color: $grey-color;
+    background-color: $grey;
     color: white;
 }
 
@@ -80,7 +81,7 @@ button:hover {
     padding: 0px 0px 14px 0px;
 }
 .comment__author {
-    color: $grey-color;
+    color: $grey;
 }
 .comment__date {
     font-size: $small-font-size;
@@ -90,14 +91,14 @@ button:hover {
 }
 .comment__meta {
     text-align: left;
-    color: $grey-color;
+    color: $grey;
     font-size: $small-font-size;
 }
 .comments__existing {
     padding: 8px 0px 0px 0px;
 }
 .comment {
-    border-top: 0px solid $grey-color-light;
+    border-top: 0px solid $lightGrey;
     padding: 0px 0px 0px 0px;
     margin-bottom: 1em;
 }
@@ -105,7 +106,7 @@ button:hover {
     margin-left: 3em;
 }
 .comment__reply-link {
-    color: $grey-color;
+    color: $grey;
     font-size: $small-font-size;
     cursor: pointer;
 }
