--- a/_includes/comment_form.html
+++ b/_includes/comment_form.html
@@ -13,8 +13,8 @@
   </div>
 
     <div class="textfield narrowfield">
-      <label for="comment-form-name">Name
-        <input class="textfield__input" name="fields[name]" type="text" id="comment-form-name" placeholder="Your name (required)" required/>
+      <label for="comment-form-name">Name/Callsign
+        <input class="textfield__input" name="fields[name]" type="text" id="comment-form-name" placeholder="Your name or callsign (required)" required/>
       </label>
     </div>
 
