use a custom slug for comments based on path

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,7 @@
 
     <div id="main" role="main" class="container">
       {{ content }}
+      {% assign commentslug = page.path | slugify %}
       {% if page.comments == true %}
         {% include comments.html %}
       {% endif %}
