--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,12 +1,11 @@
-{% assign commentslug = page.path | slugify %}
+{% assign comment_slug = page.path | slugify %}
 <section class="comments" id="comment-section">
   <hr>
-  commentslug is {% commentslug %}
-  {% if site.data.comments[commentslug] %}
+  {% if site.data.comments[comment_slug] %}
   <!-- Existing comments -->
   <div class="comments__existing">
     <h2>Comments</h2>
-    {% assign comments = site.data.comments[commentslug] | where_exp: "item", "item.replying_to_uid == ''" %}
+    {% assign comments = site.data.comments[comment_slug] | where_exp: "item", "item.replying_to_uid == ''" %}
     {% assign comments_by_date = comments | sort: 'date' | reverse %}
     <!-- List main comments in reverse date order, newest first. List replies in date order, oldest first. -->
     {% for comment in comments_by_date %}
