guestbook go live

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
             <b><a href="{{ site.baseurl }}/projects">Projects</a></b>
             <a href="{{ site.baseurl }}/about">About</a>
             <a href="{{ site.baseurl }}/resources">Resources</a>
-            <a href="{{ site.baseurl }}/">Posts</a>
+            <a href="{{ site.baseurl }}/guestbook">Guestbook</a>
           </nav>
         </header>
       </div>
