--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,3 +1,5 @@
+<script data-goatcounter="https://kf7hvm.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
 {% if site.google_analytics %}
 	<!-- Google Analytics -->
 	<script>
