added a note about comments taking a long time to post

--- a/_includes/comment_form.html
+++ b/_includes/comment_form.html
@@ -36,6 +36,8 @@
       Submit
     </button>
 
+    <em style="padding-left: 2em">Please be patient, submitting a comment may take up to 30 seconds</em>
+
 </form>
 
 <article class="modal mdl-card mdl-shadow--2dp">
