--- a/_sass/_qso-form.scss
+++ b/_sass/_qso-form.scss
@@ -16,3 +16,11 @@
   display: inline-block;
   margin-right: 3em;
 }
+
+.react-qso-form label {
+  display: block;
+}
+
+.qso-form-mode {
+  margin-left: 1em;
+}
