add 2023-03-24 scanner post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar" title="The scanner is down :["><img src="{{ site.avatar }}" /></a>
+          <a href="https://scanner.kf7hvm.com/" class="site-avatar" title="Listen to the scanner 👂"><img src="{{ site.avatar }}" /></a>
 
           <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
